# paramiday

./: .gitignore  paramibot.py  pyproject.toml
